add disaster tweets

--- a/kaggle-submission/disaster-tweets/check_keyword.ipynb
+++ b/kaggle-submission/disaster-tweets/check_keyword.ipynb
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== This words are confirmed as real as they do no present in no_fire list: ===\n",
+      "=== This words are confirmed as real fire: ===\n",
       "\n",
       "derailment\n",
       "wreckage\n",
