--- a/kaggle-submission/disaster-tweets/main_deep_learn.ipynb
+++ b/kaggle-submission/disaster-tweets/main_deep_learn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,18 @@
     "from unicodedata import normalize\n",
     "import string\n",
     "import pickle as pkl\n",
-    "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import accuracy_score"
+    "from tensorflow import keras\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import *\n",
+    "from tensorflow.keras import optimizers\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,45 +38,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   id keyword location                                               text  \\\n",
-      "0   1     NaN      NaN  Our Deeds are the Reason of this #earthquake M...   \n",
-      "1   4     NaN      NaN             Forest fire near La Ronge Sask. Canada   \n",
-      "2   5     NaN      NaN  All residents asked to 'shelter in place' are ...   \n",
-      "3   6     NaN      NaN  13,000 people receive #wildfires evacuation or...   \n",
-      "4   7     NaN      NaN  Just got sent this photo from Ruby #Alaska as ...   \n",
-      "5   8     NaN      NaN  #RockyFire Update => California Hwy. 20 closed...   \n",
-      "6  10     NaN      NaN  #flood #disaster Heavy rain causes flash flood...   \n",
-      "7  13     NaN      NaN  I'm on top of the hill and I can see a fire in...   \n",
-      "8  14     NaN      NaN  There's an emergency evacuation happening now ...   \n",
-      "9  15     NaN      NaN  I'm afraid that the tornado is coming to our a...   \n",
-      "\n",
-      "   target  \n",
-      "0       1  \n",
-      "1       1  \n",
-      "2       1  \n",
-      "3       1  \n",
-      "4       1  \n",
-      "5       1  \n",
-      "6       1  \n",
-      "7       1  \n",
-      "8       1  \n",
-      "9       1  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_df[:10])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -178,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -234,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,250 +209,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using Logistic Regression"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    6.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    6.5s finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Train\n",
-    "model_rg = LogisticRegression(solver='lbfgs', verbose=2)\n",
-    "model_rg = model_rg.fit(X=X_train, y=y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1523\n",
-      "0.804333552199606\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate model\n",
-    "y_pred = model_rg.predict(X_test)\n",
-    "print(len(y_pred))\n",
-    "print(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using SVM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LibLinear]"
-     ]
-    }
-   ],
-   "source": [
-    "model_svc = LinearSVC(random_state=True, verbose=2)\n",
-    "model_svc = model_svc.fit(X=X_train, y=y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7747866053841103\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate model\n",
-    "y_pred = model_svc.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using Naive Bayes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_nb = GaussianNB()\n",
-    "model_nb = model_nb.fit(X=X_train, y=y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6145764937623113\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate model\n",
-    "y_pred = model_nb.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using SGD Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_sgd = SGDClassifier(max_iter=1000)\n",
-    "model_sgd = model_sgd.fit(X=X_train, y=y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.768220617202889\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate model\n",
-    "y_pred = model_sgd.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using Random Forest Regressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_rf = RandomForestRegressor(max_depth=2, random_state=0)\n",
-    "# model_rf = model_rf.fit(X=X_train, y=y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Evaluate model\n",
-    "# y_pred = model_rf.predict(X_test)\n",
-    "# print(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Predict new data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         id  0\n",
-      "0         0  1\n",
-      "1         2  1\n",
-      "2         3  1\n",
-      "3         9  1\n",
-      "4        11  1\n",
-      "...     ... ..\n",
-      "3258  10861  1\n",
-      "3259  10865  1\n",
-      "3260  10868  1\n",
-      "3261  10874  1\n",
-      "3262  10875  0\n",
-      "\n",
-      "[3263 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Predict\n",
-    "new_prediction = model.predict(vect_tst_tweets)\n",
-    "new_prediction = pd.DataFrame(new_prediction)\n",
-    "new_prediction = pd.concat([test_df['id'], new_prediction], axis=1)\n",
-    "print(new_prediction)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_submission(new_prediction, fname):\n",
     "    new_prediction = new_prediction.rename({0: 'target'}, axis=1) \n",
-    "    new_prediction.to_csv(fname, index=False)\n",
-    "\n",
-    "# save_submission(new_prediction, 'submission2.csv')"
+    "    new_prediction.to_csv(fname, index=False)"
    ]
   },
   {
@@ -504,20 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow import keras\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.layers import *\n",
-    "from tensorflow.keras import optimizers\n",
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +332,7 @@
      "output_type": "stream",
      "text": [
       "Train on 6090 samples, validate on 1523 samples\n",
-      "6090/6090 [==============================] - 134s 22ms/sample - loss: 0.3829 - accuracy: 0.8419 - val_loss: 0.4805 - val_accuracy: 0.7932\n"
+      "6090/6090 [==============================] - 209s 34ms/sample - loss: 0.6693 - accuracy: 0.7131 - val_loss: 0.4647 - val_accuracy: 0.7971\n"
      ]
     }
    ],
@@ -633,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
